force-app/main/default/objects/vlocity_cmt__Stage__c/vlocity_cmt__Stage__c.object-meta.xml
<CustomObject>
    <description>Vlocity system object used to stage JSON data being imported or exported via Data Mapper.</description>
    <label>Vlocity Data Mapper Staged Data</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Mapper Staged Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>