force-app/main/default/objects/vlocity_cmt__Stage__c/fields/vlocity_cmt__Config__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Config__c</fullName>
    <label>Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>