force-app/main/default/objects/vlocity_cmt__Stage__c/fields/vlocity_cmt__Json__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Json__c</fullName>
    <label>Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>